# HIKDRVDownload

./: CMakeLists.txt  README.md  main.cpp
HCNetSDKCom/Windows/include/: DecodeCardSdk.h
